kubernetes-networks/web-pod.yaml
apiVersion: v1 
kind: Pod 
metadata:
 name: web
 labels: 
   app: web
spec: 
  volumes:
  - name: app
    emptyDir: {}
  containers: 
  - name: web
    image: ga66a/otus:kubernetes-intro
    readinessProbe: 
      httpGet:
        path: /index.html 
        port: 80
    livenessProbe:
      tcpSocket: { port: 8000 }

    volumeMounts:
    - name: app
      mountPath: /app
